# LidarSpider

./: .gitattributes  .gitignore  .gitmodules  README.md  demos.py  install.sh  requirements.txt
extended_legged_gym/LidarSensor/LidarSensor/: lidar_sensor.py
extended_legged_gym/legged_gym/: setup.py
extended_legged_gym/legged_gym/doc/: 六足.md
extended_legged_gym/legged_gym/legged_gym/envs/: __init__.py
extended_legged_gym/legged_gym/legged_gym/scripts/: examples.md  play.py  train.py  train_lidar_progressive.py
extended_legged_gym/legged_gym/legged_gym/utils/: env_replay_mixin.py  helpers.py  task_registry.py  terrain.py  terrain_confine.py
extended_legged_gym/rsl_rl/rsl_rl/algorithms/: distillation.py  ppo.py
extended_legged_gym/rsl_rl/rsl_rl/modules/: __init__.py
isaac_utils/: setup.py
traj_sampling/: MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
traj_sampling/test/: spline_cmp.py  test_profiling.py
traj_sampling/test/env_runner/: test_batch_env.py  test_legged_gym_runner2.py  test_obsavoid2_runner.py
traj_sampling/test/experiments/: README_robot_nav.md  data_analysis.ipynb  exp_franka_plan.py  exp_robot_nav.py
traj_sampling/test/trajopt_cmp/: README.md  exp1_sample_cost.ipynb  experiment_intro.md  run_comparison.py  trajopt_cmp.py  trajopt_env.py
traj_sampling/traj_sampling/: __init__.py  noise_sampler.py  noise_scheduler.py  optimizer.py  spline.py  traj_grad_sampling.py  trajopt_policy.py
traj_sampling/traj_sampling/config/: trajectory_optimization_config.py
traj_sampling/traj_sampling/env_runner/: __init__.py  env_runner_base.py
traj_sampling/traj_sampling/env_runner/legged_gym/: franka_plan_envrunner.py  legged_gym_envrunner2.py  robot_nav_envrunner.py
traj_sampling/traj_sampling/env_runner/obsavoid/: __init__.py  obsavoid_batch_env.py  obsavoid_env.py  obsavoid_envrunner.py
traj_sampling/traj_sampling/env_runner/obsavoid2/: __init__.py  obsavoid2_batch_env.py  obsavoid2_envrunner.py
traj_sampling/traj_sampling/utils/: benchmark.py  profiling.py
(+16 files in other folders)
