[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traj_sampling"
version = "1.0.0"
authors = [
    {name = "MasterYip @ HIT"},
]
description = "Trajectory optimization and sampling utilities for robotics and control"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "trajectory optimization",
    "robotics",
    "control",
    "spline interpolation",
    "reinforcement learning",
    "model predictive control",
    "sampling-based optimization",
]
dependencies = [
    "numpy<2.0.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
jax = [
    "jax[cuda12]",
    "jax-cosmo",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
]
all = [
    "jax[cuda12]",
    "jax-cosmo",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
]

[project.urls]
"Bug Reports" = "https://github.com/MasterYip/PredictiveDiffusionPlanner/issues"
"Source" = "https://github.com/MasterYip/PredictiveDiffusionPlanner"
"Documentation" = "https://github.com/MasterYip/PredictiveDiffusionPlanner/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["traj_sampling*"]

[tool.setuptools.package-data]
traj_sampling = ["*.py"]